# lab06

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
examples/: example1.cpp  example2.cpp
sources/: print.cpp
